feat: connect grounded knowledge pipeline
